--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <ul>
             <li><a href="#apropos">À propos</a></li>
-            <li><a href="#services">Services</a></li>
+            <li><a href="#services.html">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
