--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="brice-boucly-portfolio.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html" class="active">Services</a></li>
             <li><a href="brice-boucly-portfolio.html#contact">Contact</a></li>
         </ul>
