--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="portfolio.html">Accueil</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html" class="active">Contact</a></li>
         </ul>
