--- a/services.html
+++ b/services.html
@@ -18,7 +18,7 @@
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html" class="active">Services</a></li>
-            <li><a href="brice-boucly-portfolio.html#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
     <section class="container">
