Fix typo in 'entrepreneuriat' in index.html

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <section id="apropos" class="container">
         <h3>À propos de moi</h3>
         <p>
-            Je m'appelle <strong>Brice Boucly</strong>, professionnel passionné par le commerce et l'entrepreneuriat.
+            Je m'appelle <strong>Brice Boucly</strong>, professionnel passionné par le commerce et l'entreprenariat.
             Fort d'une expérience solide dans l'hôtellerie, la restauration, la livraison de marchandises et de nourritures, 
             j'offre une gamme complète de prestations de service adaptées aux besoins de mes clients. 
             Mon objectif : offrir un service personnalisé, efficace et de qualité.
