Fix script source path in index.html

--- a/index.html
+++ b/index.html
@@ -60,6 +60,6 @@
             <p>&copy; 2025 Brice Boucly. Tous droits réservés.</p>
         </div>
     </footer>
-    <script src="../js/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 </html>
