--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Brice Boucly</title>
+    <title>Contact - B-SOLUTIONS</title>
     <link rel="stylesheet" href="style.css">
     <style>
         /* Styles additionnels pour calendrier/modale, compatible avec la charte */
