--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <ul>
             <li><a href="#apropos">À propos</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="contact.html">Contacts</a></li>
         </ul>
     </nav>
     <section id="apropos" class="container">
