--- a/contact.html
+++ b/contact.html
@@ -114,7 +114,7 @@
         <ul>
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html" class="active">Contact</a></li>
+            <li><a href="contact.html" class="active">Contacts</a></li>
         </ul>
     </nav>
     <section class="container">
