--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="b-solutions-logo.png" alt="Logo B-SOLUTIONS" class="logo-top-left">
+        <img src="B-Solutions.png" alt="Logo B-SOLUTIONS" class="logo-top-left">
         <div class="container">
             <h1>Brice Boucly</h1>
             <h2>Commercial & Entrepreneur</h2>
