Update header section with services title and description

--- a/services.html
+++ b/services.html
@@ -9,8 +9,8 @@
 <body>
     <header>
         <div class="container">
-            <h1>Brice Boucly</h1>
-            <h2>Commercial & Entrepreneur</h2>
+            <h1>Services</h1>
+            <h2>L'ensemble des services proposés</h2>
             <p>Votre partenaire de confiance pour des prestations de service sur-mesure</p>
         </div>
     </header>
