Fix self-closing tag for logo image

--- a/services.html
+++ b/services.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="B-Solutions.png" class="logo-top-left">
+        <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
             <h1>Services</h1>
             <h2>L'ensemble des services proposés</h2>
