--- a/contact.html
+++ b/contact.html
@@ -104,6 +104,7 @@
 </head>
 <body>
     <header>
+        <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
             <h1>Contact</h1>
             <h2>Je suis à votre écoute pour vos réservations et demandes de services</h2>
