--- a/index.html
+++ b/index.html
@@ -26,10 +26,11 @@
         <h3>À propos de moi</h3>
         <p>
             Je m'appelle <strong>Brice Boucly</strong>, professionnel passionné par le commerce et l'entreprenariat.
-            <p>
+            <p></p>
             Fort d'une expérience solide dans l'hôtellerie, la restauration, la livraison de marchandises et de nourritures, 
-            j'offre une gamme complète de prestations de service adaptées aux besoins de mes clients. 
-            Mon objectif : offrir un service personnalisé, efficace et de qualité.
+            j'offre une gamme complète de prestations de service adaptées aux besoins de mes clients.
+            <p></p>
+            <strong>Mon objectif</strong> : offrir un service personnalisé, efficace et de qualité.
         </p>
     </section>
     <section id="services" class="container">
