--- a/index.html
+++ b/index.html
@@ -45,6 +45,30 @@
             <li>Autres prestations sur-mesure</li>
         </ul>
     </section>
+     <!-- Bloc Diplômes -->
+    <section id="diplomes" class="container">
+        <h3>Mes diplômes</h3>
+        <ul class="diplomes-list">
+            <li>Permis côtier</li>
+            <li>Permis B</li>
+            <li>Licence en commerce et management</li>
+            <li>PSC1</li>
+        </ul>
+    </section>
+    <!-- Bloc Matériel possédé -->
+    <section id="materiel" class="container">
+        <h3>Mon matériel</h3>
+        <ul class="materiel-list">
+            <li class="mat-hover" data-img="img/vehicule.png">Véhicule motorisé</li>
+            <li class="mat-hover" data-img="img/tenue.png">Tenue professionnelle</li>
+            <li class="mat-hover" data-img="img/tondeuse.png">Tondeuse</li>
+            <li class="mat-hover" data-img="img/tronconneuse.png">Tronçonneuse</li>
+            <li class="mat-hover" data-img="img/outils.png">Outils entretien et rénovation extérieur</li>
+        </ul>
+        <div id="mat-illustration" style="display: none;">
+            <img src="" alt="Illustration matériel" id="mat-img" style="max-width:200px;"/>
+        </div>
+    </section>
     <section id="contact" class="container">
         <h3>Contactez-moi</h3>
         <form id="contactForm">
@@ -64,5 +88,19 @@
         </div>
     </footer>
     <script src="js/script.js"></script>
+    <script>
+        // Effet illustration matériel au survol
+        document.querySelectorAll('.mat-hover').forEach(function(item) {
+            item.addEventListener('mouseenter', function() {
+                var img = document.getElementById('mat-img');
+                img.src = item.getAttribute('data-img');
+                img.alt = item.textContent;
+                document.getElementById('mat-illustration').style.display = 'block';
+            });
+            item.addEventListener('mouseleave', function() {
+                document.getElementById('mat-illustration').style.display = 'none';
+            });
+        });
+    </script>
 </body>
 </html>
