--- a/avis-clients.html
+++ b/avis-clients.html
@@ -126,6 +126,14 @@
     </style>
 </head>
 <body>
+    <nav>
+        <ul>
+            <li><a href="#apropos">À propos</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="avis-clients.html">Avis-clients</a></li>
+        </ul>
+    </nav>
     <div class="container">
         <h1>Avis Clients</h1>
         <!-- Onglet navigation (pour extension future: autres catégories) -->
