--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             <li><a href="#apropos">À propos</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="avis-clients.html">Avis-clients</a></li>
         </ul>
     </nav>
     <section id="apropos" class="container">
