--- a/contact.html
+++ b/contact.html
@@ -116,6 +116,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html" class="active">Contacts</a></li>
+            <li><a href="avis-clients.html">Avis-clients</a></li>
         </ul>
     </nav>
     <section class="container">
