Add link to client reviews page in services.html

--- a/services.html
+++ b/services.html
@@ -20,6 +20,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html" class="active">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
+            <li><a href="avis-clients.html">Avis-clients</a></li>
         </ul>
     </nav>
     <section class="container">
