Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#apropos">À propos</a></li>
+            <li><a href="index.html" class="active">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="avis-clients.html">Avis-clients</a></li>
