--- a/avis-clients.html
+++ b/avis-clients.html
@@ -131,7 +131,7 @@
             <li><a href="#apropos">À propos</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
-            <li><a href="avis-clients.html">Avis-clients</a></li>
+            <li><a href="avis-clients.html" class="active">Avis-Clients</a></li>
         </ul>
     </nav>
     <div class="container">
