--- a/avis-clients.html
+++ b/avis-clients.html
@@ -128,7 +128,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="#apropos">À propos</a></li>
+            <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
             <li><a href="avis-clients.html" class="active">Avis-Clients</a></li>
