--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
         </ul>
     </section>
     <section class="container">
-        <h3>Exemple de calendrier de réservations</h3>
+        <h3>Calendrier de réservations</h3>
         <div class="calendar-container">
             <table class="calendar" id="calendar"></table>
         </div>
