--- a/avis-clients.html
+++ b/avis-clients.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+     <header>
+        <img src="B-Solutions.png" class="logo-top-left" />
+        <div class="container">
+            <h1>Avis Clients</h1>
+            <h2>Vos avis concernant les prestations</h2>
+            <p>Votre partenaire de confiance pour des prestations de service sur-mesure</p>
+        </div>
+    </header>
     <nav>
         <ul>
             <li><a href="index.html">Accueil</a></li>
