--- a/avis-clients.html
+++ b/avis-clients.html
@@ -20,7 +20,7 @@
             <li><a href="index.html">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contact.html">Contacts</a></li>
-            <li><a href="avis-clients.html" class="active">Avis-Clients</a></li>
+            <li><a href="avis-clients.html" class="active">Avis-clients</a></li>
         </ul>
     </nav>
     <div class="container">
