--- a/index.html
+++ b/index.html
@@ -92,18 +92,30 @@
     </section>
     <!-- Bloc Matériel possédé -->
     <section id="materiel" class="container">
-        <h3>Mon matériel</h3>
-        <ul class="materiel-list">
-            <li class="mat-hover" data-img="img/vehicule.png">Véhicule motorisé</li>
-            <li class="mat-hover" data-img="img/tenue.png">Tenue professionnelle</li>
-            <li class="mat-hover" data-img="img/tondeuse.png">Tondeuse</li>
-            <li class="mat-hover" data-img="img/tronconneuse.png">Tronçonneuse</li>
-            <li class="mat-hover" data-img="img/outils.png">Outils entretien et rénovation extérieur</li>
-        </ul>
-        <div id="mat-illustration" style="display: none;">
-            <img src="" alt="Illustration matériel" id="mat-img" style="max-width:200px;"/>
-        </div>
-    </section>
+<h3>Mon matériel</h3>
+<ul class="materiel-list">
+<li class="mat-hover" data-img="img/vehicule.png">
+<img class="mat-img-preview" src="img/vehicule.png" alt="Véhicule motorisé">
+Véhicule motorisé
+</li>
+<li class="mat-hover" data-img="img/tenue.png">
+<img class="mat-img-preview" src="img/tenue.png" alt="Tenue professionnelle">
+Tenue professionnelle
+</li>
+<li class="mat-hover" data-img="img/tondeuse.png">
+<img class="mat-img-preview" src="img/tondeuse.png" alt="Tondeuse">
+Tondeuse
+</li>
+<li class="mat-hover" data-img="img/tronconneuse.png">
+<img class="mat-img-preview" src="img/tronconneuse.png" alt="Tronçonneuse">
+Tronçonneuse
+</li>
+<li class="mat-hover" data-img="img/outils.png">
+<img class="mat-img-preview" src="img/outils.png" alt="Outils d'entretien">
+Outils entretien et rénovation extérieur
+</li>
+</ul>
+</section>
     <section id="contact" class="container">
         <h3>Contactez-moi</h3>
         <form id="contactForm">
