--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
-            <h1>Brice Boucly</h1>
+            <h1>B-Solutions</h1>
             <h2>Commercial & Entrepreneur</h2>
             <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
         </div>
