--- a/services.html
+++ b/services.html
@@ -35,51 +35,51 @@
             <li><a href="avis-clients.html">Avis-clients</a></li>
         </ul>
     </nav>
-    <section class="container">
+<section class="container">
         <h3>Nos Services en Détail</h3>
-        <div class="categories-bloc">
-            <div class="categories-card">
-                <h4>Conseil et accompagnement commercial</h4>
-                <p>Stratégies personnalisées pour accroître vos ventes, analyse de marché et formation des équipes commerciales.</p>
-                <a href="categorie-commercial.html">Voir la catégorie</a>
+            <div class="categories-bloc">
+            <div class="categories-card" style="background-image:url('img/commercial.jpg')">
+        <h4>Conseil et accompagnement commercial</h4>
+        <p>Stratégies personnalisées pour accroître vos ventes...</p>
+        <a href="categorie-commercial.html">Voir la catégorie</a>
             </div>
-            <div class="categories-card">
-                <h4>Gestion d'équipes et optimisation des ventes</h4>
-                <p>Mise en place d'objectifs, motivation des équipes, suivi de performance, techniques de vente avancées.</p>
-                <a href="categorie-equipe.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Services en hôtellerie et restauration</h4>
-                <p>Gestion opérationnelle, recrutement, formation, amélioration de la satisfaction client, optimisation des achats.</p>
-                <a href="categorie-hotellerie.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Livraison de marchandises et de nourritures</h4>
-                <p>Organisation logistique, optimisation des tournées, respect des délais et des normes de sécurité, traçabilité.</p>
-                <a href="categorie-livraison.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Organisation d'événements</h4>
-                <p>Séminaires, soirées, team-building, événements professionnels et privés, accompagnement sur-mesure.</p>
-                <a href="categorie-evenement.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Logistique et gestion de projets</h4>
-                <p>Gestion complète de projet : planification, coordination, suivi budgétaire, respect des délais.</p>
-                <a href="categorie-logistique.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Autres prestations sur-mesure</h4>
-                <p>Services personnalisés, gestion ponctuelle ou à long terme, solutions innovantes et flexibles.</p>
-                <a href="categorie-sur-mesure.html">Voir la catégorie</a>
-            </div>
-            <div class="categories-card">
-                <h4>Coupe du bois</h4>
-                <p>Service professionnel de coupe de bois : abattage, débitage et préparation. Respect de l'environnement.</p>
-                <a href="categorie-bois.html">Voir la catégorie</a>
-            </div>
-        </div>
-    </section>
+            <div class="categories-card" style="background-image:url('img/equipe.jpg')">
+        <h4>Gestion d'équipes</h4>
+        <p>Mise en place d'objectifs, motivation des équipes...</p>
+    <a href="categorie-equipe.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/hotellerie.jpg')">
+<h4>Hôtellerie & restauration</h4>
+<p>Gestion opérationnelle, recrutement...</p>
+<a href="categorie-hotellerie.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/livraison.jpg')">
+<h4>Livraison</h4>
+<p>Organisation logistique, optimisation des tournées...</p>
+<a href="categorie-livraison.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/evenement.jpg')">
+<h4>Organisation d'événements</h4>
+<p>Séminaires, soirées, team-building...</p>
+<a href="categorie-evenement.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/logistique.jpg')">
+<h4>Logistique & gestion de projets</h4>
+<p>Gestion complète de projet...</p>
+<a href="categorie-logistique.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/surmesure.jpg')">
+<h4>Prestations sur-mesure</h4>
+<p>Services personnalisés...</p>
+<a href="categorie-sur-mesure.html">Voir la catégorie</a>
+</div>
+<div class="categories-card" style="background-image:url('img/bois.jpg')">
+<h4>Coupe du bois</h4>
+<p>Abattage, débitage...</p>
+<a href="categorie-bois.html">Voir la catégorie</a>
+</div>
+</div>
+</section>
     <footer>
         <div class="container">
             <p>&copy; 2025 Brice Boucly. Tous droits réservés.</p>
