--- a/services.html
+++ b/services.html
@@ -40,43 +40,44 @@
             <div class="categories-bloc">
             <div class="categories-card" style="background-image:url('img/commercial.jpg')">
         <h4>Conseil et accompagnement commercial</h4>
-        <p>Stratégies personnalisées pour accroître vos ventes...</p>
         <a href="categorie-commercial.html">Voir la catégorie</a>
+        <p class="legend">Stratégies personnalisées pour accroître vos ventes...</p>
             </div>
             <div class="categories-card" style="background-image:url('img/equipe.jpg')">
         <h4>Gestion d'équipes</h4>
-        <p>Mise en place d'objectifs, motivation des équipes...</p>
     <a href="categorie-equipe.html">Voir la catégorie</a>
+    <p class="legend">Mise en place d'objectifs, motivation des équipes...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/hotellerie.jpg')">
 <h4>Hôtellerie & restauration</h4>
-<p>Gestion opérationnelle, recrutement...</p>
 <a href="categorie-hotellerie.html">Voir la catégorie</a>
+<p class="legend">Gestion opérationnelle, recrutement...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/livraison.jpg')">
 <h4>Livraison</h4>
-<p>Organisation logistique, optimisation des tournées...</p>
 <a href="categorie-livraison.html">Voir la catégorie</a>
+<p class="legend">Organisation logistique, optimisation des tournées...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/evenement.jpg')">
 <h4>Organisation d'événements</h4>
-<p>Séminaires, soirées, team-building...</p>
 <a href="categorie-evenement.html">Voir la catégorie</a>
+<p class="legend">Séminaires, soirées, team-building...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/logistique.jpg')">
 <h4>Logistique & gestion de projets</h4>
 <p>Gestion complète de projet...</p>
 <a href="categorie-logistique.html">Voir la catégorie</a>
+<p class="legend">Gestion complète de projet...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/surmesure.jpg')">
 <h4>Prestations sur-mesure</h4>
-<p>Services personnalisés...</p>
 <a href="categorie-sur-mesure.html">Voir la catégorie</a>
+    <p class="legend">Services personnalisés...</p>
 </div>
 <div class="categories-card" style="background-image:url('img/bois.jpg')">
 <h4>Coupe du bois</h4>
-<p>Abattage, débitage...</p>
 <a href="categorie-bois.html">Voir la catégorie</a>
+    <p class="legend">Abattage, débitage...</p>
 </div>
 </div>
 </section>
