--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     </style>
 </head>
 <body>
+    <video class="video-top-right" autoplay muted loop playsinline>
+        <source src="videos/presentation.mp4" type="video/mp4">
+        Votre navigateur ne supporte pas la vidéo.
+    </video>
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
