--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 </head>
 <body>
     <video class="video-top-right" autoplay muted loop playsinline>
-        <source src="videos/presentation.mp4" type="video/mp4">
-        Votre navigateur ne supporte pas la vidéo.
+        <source src="animation.mp4" type="video/mp4">
     </video>
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
