--- a/services.html
+++ b/services.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <video class="video-top-right" autoplay muted loop playsinline>
+        <source src="animation.mp4" type="video/mp4">
+    </video>
     <header>
         <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
