--- a/contact.html
+++ b/contact.html
@@ -103,6 +103,9 @@
     </style>
 </head>
 <body>
+    <video class="video-top-right" autoplay muted loop playsinline>
+        <source src="animation.mp4" type="video/mp4">
+    </video>
     <header>
         <img src="B-Solutions.png" class="logo-top-left" />
         <div class="container">
