--- a/avis-clients.html
+++ b/avis-clients.html
@@ -15,7 +15,7 @@
         <div class="container">
             <h1>Avis Clients</h1>
             <h2>Vos avis concernant les prestations</h2>
-            <p>Votre partenaire de confiance pour des prestations de service sur-mesure</p>
+            <p>Vos retours</p>
         </div>
     </header>
     <nav>
