--- a/services.html
+++ b/services.html
@@ -42,46 +42,46 @@
         <h3>Nos Services en Détail</h3>
             <div class="categories-bloc">
             <div class="categories-card" style="background-image:url('img/commercial.jpg')">
-        <h4>Conseil et accompagnement commercial</h4>
         <a href="categorie-commercial.html">Voir la catégorie</a>
             </div>
+            <h4>Conseil et accompagnement commercial</h4>
             <p class="description">Stratégies personnalisées pour accroître vos ventes...</p>
             <div class="categories-card" style="background-image:url('img/equipe.jpg')">
-        <h4>Gestion d'équipes</h4>
     <a href="categorie-equipe.html">Voir la catégorie</a>
 </div>
+    <h4>Gestion d'équipes</h4>
     <p class="description">Mise en place d'objectifs, motivation des équipes...</p>
 <div class="categories-card" style="background-image:url('img/hotellerie.jpg')">
-<h4>Hôtellerie & restauration</h4>
 <a href="categorie-hotellerie.html">Voir la catégorie</a>
 </div>
+    <h4>Hôtellerie & restauration</h4>
     <p class="description">Gestion opérationnelle, recrutement...</p>
 <div class="categories-card" style="background-image:url('img/livraison.jpg')">
-<h4>Livraison</h4>
 <a href="categorie-livraison.html">Voir la catégorie</a>
 </div>
+    <h4>Livraison</h4>
     <p class="description">Organisation logistique, optimisation des tournées...</p>
 <div class="categories-card" style="background-image:url('img/evenement.jpg')">
-<h4>Organisation d'événements</h4>
 <a href="categorie-evenement.html">Voir la catégorie</a>
 </div>
+    <h4>Organisation d'événements</h4>
     <p class="description">Séminaires, soirées, team-building...</p>
 <div class="categories-card" style="background-image:url('img/logistique.jpg')">
 <h4>Logistique & gestion de projets</h4>
 <p>Gestion complète de projet...</p>
 <a href="categorie-logistique.html">Voir la catégorie</a>
-<p class="legend">Gestion complète de projet...</p>
 </div>
+    <h4>Logistique & gestion de projets</h4>
     <p class="description">Gestion complète de projet...</p>
 <div class="categories-card" style="background-image:url('img/surmesure.jpg')">
-<h4>Prestations sur-mesure</h4>
 <a href="categorie-sur-mesure.html">Voir la catégorie</a>
 </div>
+    <h4>Prestations sur-mesure</h4>
     <p class="description">Services personnalisés...</p>
 <div class="categories-card" style="background-image:url('img/bois.jpg')">
-<h4>Coupe du bois</h4>
 <a href="categorie-bois.html">Voir la catégorie</a>
 </div>
+    <h4>Bucheronnage</h4>
     <p class="description">Abattage, débitage...</p>
 </div>
 </section>
