--- a/services.html
+++ b/services.html
@@ -44,45 +44,44 @@
             <div class="categories-card" style="background-image:url('img/commercial.jpg')">
         <a href="categorie-commercial.html">Voir la catégorie</a>
             </div>
-            <h4>Conseil et accompagnement commercial</h4>
-            <p class="description">Stratégies personnalisées pour accroître vos ventes...</p>
+            <p class="description"> <h4>Conseil et accompagnement commercial</h4>
+            Stratégies personnalisées pour accroître vos ventes...</p>
             <div class="categories-card" style="background-image:url('img/equipe.jpg')">
     <a href="categorie-equipe.html">Voir la catégorie</a>
 </div>
-    <h4>Gestion d'équipes</h4>
-    <p class="description">Mise en place d'objectifs, motivation des équipes...</p>
+    <p class="description"> <h4>Gestion d'équipes</h4>
+    Mise en place d'objectifs, motivation des équipes...</p>
 <div class="categories-card" style="background-image:url('img/hotellerie.jpg')">
 <a href="categorie-hotellerie.html">Voir la catégorie</a>
 </div>
-    <h4>Hôtellerie & restauration</h4>
-    <p class="description">Gestion opérationnelle, recrutement...</p>
+     <p class="description"> <h4>Hôtellerie & restauration</h4>
+   Gestion opérationnelle, recrutement...</p>
 <div class="categories-card" style="background-image:url('img/livraison.jpg')">
 <a href="categorie-livraison.html">Voir la catégorie</a>
 </div>
-    <h4>Livraison</h4>
-    <p class="description">Organisation logistique, optimisation des tournées...</p>
+     <p class="description"> <h4>Livraison</h4>
+    Organisation logistique, optimisation des tournées...</p>
 <div class="categories-card" style="background-image:url('img/evenement.jpg')">
 <a href="categorie-evenement.html">Voir la catégorie</a>
 </div>
-    <h4>Organisation d'événements</h4>
-    <p class="description">Séminaires, soirées, team-building...</p>
+     <p class="description"> <h4>Organisation d'événements</h4>
+    Séminaires, soirées, team-building...</p>
 <div class="categories-card" style="background-image:url('img/logistique.jpg')">
 <h4>Logistique & gestion de projets</h4>
-<p>Gestion complète de projet...</p>
 <a href="categorie-logistique.html">Voir la catégorie</a>
 </div>
-    <h4>Logistique & gestion de projets</h4>
-    <p class="description">Gestion complète de projet...</p>
+     <p class="description"> <h4>Logistique & gestion de projets</h4>
+    Gestion complète de projet...</p>
 <div class="categories-card" style="background-image:url('img/surmesure.jpg')">
 <a href="categorie-sur-mesure.html">Voir la catégorie</a>
 </div>
-    <h4>Prestations sur-mesure</h4>
-    <p class="description">Services personnalisés...</p>
+     <p class="description"> <h4>Prestations sur-mesure</h4>
+   Services personnalisés...</p>
 <div class="categories-card" style="background-image:url('img/bois.jpg')">
 <a href="categorie-bois.html">Voir la catégorie</a>
 </div>
-    <h4>Bucheronnage</h4>
-    <p class="description">Abattage, débitage...</p>
+     <p class="description"> <h4>Bucheronnage</h4>
+    Abattage, débitage...</p>
 </div>
 </section>
     <footer>
