--- a/index.html
+++ b/index.html
@@ -44,20 +44,23 @@
     </video>
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
-        <div class="container">
-            <h1>B-Solutions</h1>
-            <h2>Commercial & Entrepreneur</h2>
-            <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
-        </div>
-    </header>
-    <nav>
-        <ul>
-            <li><a href="index.html" class="active">Accueil</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contact.html">Contacts</a></li>
-            <li><a href="avis-clients.html">Avis-clients</a></li>
-        </ul>
-    </nav>
+    
+    <div class="container header-inner">
+        <h1>B-Solutions</h1>
+        <h2>Commercial & Entrepreneur</h2>
+        <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
+        
+        <nav class="nav-in-header">
+            <ul>
+                <li><a href="index.html" class="active">Accueil</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contact.html">Contacts</a></li>
+                <li><a href="avis-clients.html">Avis-clients</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
+
     <section id="apropos" class="container">
         <h3>À propos de moi</h3>
         <p>
