--- a/index.html
+++ b/index.html
@@ -44,22 +44,27 @@
     </video>
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
-    
     <div class="container header-inner">
         <h1>B-Solutions</h1>
         <h2>Commercial & Entrepreneur</h2>
         <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
-        
-        <nav class="nav-in-header">
-            <ul>
-                <li><a href="index.html" class="active">Accueil</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="contact.html">Contacts</a></li>
-                <li><a href="avis-clients.html">Avis-clients</a></li>
-            </ul>
-        </nav>
     </div>
+
+    <!-- NAV placée DANS le header, positionnée en bas du header -->
+    <nav class="nav-in-header" aria-label="Main navigation">
+        <ul>
+            <li><a href="index.html" class="active">Accueil</a></li>
+            <li><a href="services.html">Services</a></li>
+            <li><a href="contact.html">Contacts</a></li>
+            <li><a href="avis-clients.html">Avis-clients</a></li>
+        </ul>
+    </nav>
+
+    <!-- boutons fixes MAIS positionnés à l'intérieur du header (donc ils "descendent") -->
+    <a href="services.html" class="btn-fixe btn-fixe-services">Services</a>
+    <a href="contact.html" class="btn-fixe btn-fixe-contact">Contact</a>
 </header>
+
 
     <section id="apropos" class="container">
         <h3>À propos de moi</h3>
