--- a/index.html
+++ b/index.html
@@ -44,14 +44,13 @@
     </video>
     <header>
     <img src="B-Solutions.png" class="logo-top-left" />
-    <div class="container header-inner">
-        <h1>B-Solutions</h1>
-        <h2>Commercial & Entrepreneur</h2>
-        <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
-    </div>
-
-    <!-- NAV placée DANS le header, positionnée en bas du header -->
-    <nav class="nav-in-header" aria-label="Main navigation">
+        <div class="container">
+            <h1>B-Solutions</h1>
+            <h2>Commercial & Entrepreneur</h2>
+            <p>Spécialiste en prestations de service : hôtellerie, restauration, livraison & bien plus</p>
+        </div>
+    </header>
+    <nav>
         <ul>
             <li><a href="index.html" class="active">Accueil</a></li>
             <li><a href="services.html">Services</a></li>
@@ -59,13 +58,6 @@
             <li><a href="avis-clients.html">Avis-clients</a></li>
         </ul>
     </nav>
-
-    <!-- boutons fixes MAIS positionnés à l'intérieur du header (donc ils "descendent") -->
-    <a href="services.html" class="btn-fixe btn-fixe-services">Services</a>
-    <a href="contact.html" class="btn-fixe btn-fixe-contact">Contact</a>
-</header>
-
-
     <section id="apropos" class="container">
         <h3>À propos de moi</h3>
         <p>
